feat: 修复推文浏览器导入功能并遵循CSP
- 修复了推文浏览器因内容安全策略（CSP）无法加载内联脚本，导致文件导入功能失效的bug。
- 将tweet-browser.html中的内联JavaScript代码提取到独立的tweet-browser.js文件中。
- 更新了manifest.json的web_accessible_resources以包含新的脚本文件。
- 更新版本号至1.1.6，并添加了相应的更新日志。

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Twitter推文收藏器",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "在Twitter推文旁添加收藏按钮，将推文保存到本地",
   "permissions": [
     "activeTab",
@@ -28,7 +28,7 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["tweet-browser.html", "debug.html", "help.html"],
+      "resources": ["tweet-browser.html", "tweet-browser.js", "debug.html", "help.html"],
       "matches": ["<all_urls>"]
     }
   ]
