feat(UI): 全新设计的弹出界面并修复加载Bug
主要更新：
- 重新设计了弹出设置界面，采用更现代、简洁和美观的卡片式布局。
- 移除了冗余的UI元素，优化了核心设置的操作流程。
- 修复了推文浏览器因JSON数据不完整而卡在加载界面的Bug。
- 更新版本号至1.1.7，并添加了详细的更新日志。

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Twitter推文收藏器",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "在Twitter推文旁添加收藏按钮，将推文保存到本地",
   "permissions": [
     "activeTab",
@@ -24,7 +24,19 @@
   },
   "action": {
     "default_popup": "popup.html",
-    "default_title": "Twitter推文收藏器设置"
+    "default_title": "Twitter推文收藏器设置",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "32": "icons/icon32.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
+  },
+  "icons": {
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   },
   "web_accessible_resources": [
     {
