--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Twitter推文收藏器",
-  "version": "1.1.7",
-  "description": "在Twitter推文旁添加收藏按钮，将推文保存到本地",
+  "version": "1.1.8",
+  "description": "在Twitter/X推文旁边添加收藏按钮，一键保存推文到本地文件夹。",
   "permissions": [
     "activeTab",
     "storage",
