feat: Complete TypeScript refactor
This commit marks the completion of the full refactor from JavaScript to a modern TypeScript architecture using Vite and Rollup.

- All scripts (background, content, popup) converted to TypeScript.

- Implemented a robust build system with separate configs for each script type.

- Resolved all major compatibility issues with Manifest V3, including Service Worker environment limitations (document, URL).

- Fixed all identified bugs, including media path resolution in generated HTML files.

- The extension is now fully functional and stable in its new architecture.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,30 +1,32 @@
 {
   "manifest_version": 3,
-  "name": "Twitter推文收藏器",
-  "version": "1.1.9",
-  "description": "在Twitter/X推文旁边添加收藏按钮，一键保存推文到本地文件夹。",
+  "name": "GglKnow - Tweet Saver",
+  "version": "1.2.0",
+  "description": "Save and browse tweets locally with media support",
   "permissions": [
-    "activeTab",
     "storage",
-    "downloads"
+    "downloads",
+    "activeTab"
   ],
   "host_permissions": [
     "https://twitter.com/*",
-    "https://x.com/*"
+    "https://x.com/*",
+    "https://pbs.twimg.com/*"
   ],
+  "background": {
+    "service_worker": "background/index.js",
+    "type": "module"
+  },
   "content_scripts": [
     {
       "matches": ["https://twitter.com/*", "https://x.com/*"],
       "js": ["content/index.js"],
-      "css": ["styles.css"]
+      "run_at": "document_idle"
     }
   ],
-  "background": {
-    "service_worker": "background/index.js"
-  },
   "action": {
-    "default_popup": "src/popup/index.html",
-    "default_title": "Twitter推文收藏器设置",
+    "default_popup": "popup/index.html",
+    "default_title": "GglKnow - Tweet Saver",
     "default_icon": {
       "16": "icons/icon16.png",
       "32": "icons/icon32.png",
@@ -40,8 +42,11 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["tweet-browser.html", "tweet-browser.js", "debug.html", "help.html"],
+      "resources": ["tweet-browser.html", "tweet-browser.js"],
       "matches": ["<all_urls>"]
     }
-  ]
+  ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
+  }
 } 
