--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Twitter推文收藏器",
-  "version": "2.0.0",
-  "version_name": "2.0.0 - TypeScript Refactor",
+  "version": "2.0.1",
+  "version_name": "2.0.1 - 修复JSON和Markdown保存失败问题",
   "description": "在Twitter/X推文旁边添加收藏按钮，一键保存推文到本地文件夹。",
   "permissions": [
     "activeTab",
