feat(i18n): add internationalization support for Chinese and English
- Add complete i18n support with Chrome extension i18n API
- Add src/_locales/ directory with en and zh_CN language packs
- Support 344 localized strings covering all UI text
- Auto-detect browser language and display corresponding language
- Configure default_locale in manifest.json with __MSG_*__ placeholders
- Update version to 2.1.0 for this major feature addition

--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,10 @@
 {
   "manifest_version": 3,
-  "name": "Twitter推文收藏器",
-  "version": "2.0.4",
-  "version_name": "2.0.4",
-  "description": "在Twitter/X推文旁边添加收藏按钮，一键保存推文到本地文件夹。",
+  "name": "__MSG_extName__",
+  "version": "2.1.0",
+  "version_name": "2.1.0",
+  "description": "__MSG_extDescription__",
+  "default_locale": "en",
   "permissions": [
     "activeTab",
     "storage",
@@ -25,7 +26,7 @@
   },
   "action": {
     "default_popup": "src/popup/index.html",
-    "default_title": "Twitter推文收藏器设置",
+    "default_title": "__MSG_actionTitle__",
     "default_icon": {
       "16": "icons/icon16.png",
       "32": "icons/icon32.png",
