feat: 添加推文浏览器记忆功能 v2.1.2
- 新增推文数据自动保存和恢复功能
- 支持过滤器状态记忆（搜索、作者筛选、时间筛选）
- 添加重新加载图片按钮和清除数据按钮
- 智能文件夹检测功能
- 修复图片加载问题，提供便捷的图片重新加载
- 更新版本号到 2.1.2

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gglknow",
-  "version": "2.1.2-dev",
+  "version": "2.1.2",
   "description": "A Chrome extension to save tweets locally.",
   "type": "module",
   "scripts": {
