--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,8 +2,8 @@
   "manifest_version": 3,
   "name": "__MSG_extensionName__",
   "description": "__MSG_extensionDescription__",
-  "version": "2.1.2",
-  "version_name": "2.1.2-dev",
+  "version": "2.1.3",
+  "version_name": "2.1.3",
   "default_locale": "en",
   "permissions": [
     "storage",
