--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,13 +2,12 @@
   "manifest_version": 3,
   "name": "__MSG_extensionName__",
   "description": "__MSG_extensionDescription__",
-  "version": "2.1.3",
-  "version_name": "2.1.3",
+  "version": "2.1.4",
+  "version_name": "2.1.4",
   "default_locale": "en",
   "permissions": [
     "storage",
-    "downloads",
-    "activeTab"
+    "downloads"
   ],
   "host_permissions": [
     "https://twitter.com/*",
