fix: Cross-platform build script compatibility
- Replace Windows-specific commands (rmdir, copy, xcopy, powershell) with Node.js scripts
- Add scripts/build-utils.js for cross-platform file operations
- Update package.json scripts to use node commands
- Fix clean, copy:assets, and zip commands to work on Linux/macOS/Windows
- Enable smooth development workflow across all platforms

--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "dev": "vite",
     "build": "npm run build:all",
     "build:all": "npm run clean && tsc && vite build && npm run build:sw && npm run build:popup && npm run build:content && npm run copy:assets",
-    "clean": "rmdir /s /q dist 2>nul || echo \"Dist directory cleaned\"",
+    "clean": "node scripts/build-utils.js clean",
     "build:sw": "rollup -c rollup.sw.config.js",
     "build:popup": "rollup -c rollup.popup.config.js",
     "build:content": "rollup -c rollup.content.config.js",
-    "copy:assets": "copy manifest.json dist\\ && copy styles.css dist\\ && xcopy icons dist\\icons\\ /E /I && copy tweet-browser.html dist\\ && copy tweet-browser.js dist\\ && copy help.html dist\\ && xcopy src\\_locales dist\\_locales\\ /E /I && xcopy src\\popup dist\\src\\popup\\ /E /I",
-    "zip": "powershell.exe -Command \"$version = (Get-Content package.json | ConvertFrom-Json).version; Compress-Archive -Path dist -DestinationPath \"gglknow-v$version-release.zip\" -Force\"",
+    "copy:assets": "node scripts/build-utils.js copy:assets",
+    "zip": "node scripts/build-utils.js zip",
     "preview": "vite preview",
     "type-check": "tsc --noEmit",
     "lint": "eslint src --ext .ts,.tsx",
